--- a/style.css
+++ b/style.css
@@ -13,6 +13,8 @@ body{
 }
 ul,li{
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 body{
     font-family: 'Roboto',Arial sans-serif;
@@ -70,4 +72,162 @@ img{
 .slider-description p{
     font-size: 16px;
     margin-bottom: 40px;
+}
+.slider-img{
+    display: flex;
+}
+.nav-item a:hover{
+    opacity: 0.8;
+}
+.skills-list{
+    display: flex;
+    justify-content: space-between;
+}
+.skills-list__item{
+    width: 300px;
+}
+.skills-h3{
+    font-size: 24px;
+    text-transform: uppercase;
+}
+.skills-p,.about-us-desc{
+    font-size: 16px;
+    color: #283136;
+    margin-bottom: 35px;
+}
+.about-us-desc{
+    font-weight: 500;
+}
+.skills,.studio,.partners{
+    padding-top: 80px;
+    padding-bottom: 95px;
+    border-bottom: 2px solid #eee;
+}
+.green{
+    background-color: #00ca74;
+}
+.orange{
+    background-color: #efc84a;
+}
+.about-us{
+    display: flex;
+    justify-content: space-between;
+}
+.about-us-left{
+    width: 660px;
+}
+.about-us-left h1{
+    font-size: 45px;
+    font-weight: 500;
+    margin: 0;
+}
+.about-us-left h3{
+    font-size: 16px;
+    text-transform: uppercase;
+    font-weight: 600;
+}
+.about-us-left li{
+    font-size: 16px;
+    font-weight: 500;
+    color: #283136;
+    margin-bottom: 30px;
+    position: relative;
+}
+.about-us-left ul{
+    margin-top: 35px;
+    padding-left: 65px;
+}
+.about-us-left li::before{
+    position: absolute;
+    content: "";
+    height: 2px;
+    width: 25px;
+    background-color: #FB565A;
+    left: -65px;
+    top :7px;
+}
+.about-us-right{
+    width: 360px;
+}
+.about-us-right h3{
+    text-align: center;
+    font-size: 16px;
+    display: block;
+    margin-top: 39px;
+    margin-bottom: 39px;
+}
+.pref-list{
+    display: flex;
+    justify-content: space-between;
+}
+.pref-list b{
+    font-size: 45px;
+    display: block;
+    margin-bottom: 13px;
+}
+.pref-list span{
+    font-size: 16px;
+    color: #283136;
+}
+.pref-list li{
+    width: 110px;
+}
+.phartners-list{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    opacity: 0.2;
+}
+.partners{
+    padding:45px 0;
+    margin-bottom: 80px;
+}
+.contacts{
+    position: relative;
+    min-height: 415px;
+    background-image: url(img/map.jpg);
+    padding-top: 45px;
+}
+.map-marker {
+    position: absolute;
+    width: 230px;
+    right: 300px;
+    top: 100px;
+}
+.myachik{
+    position: relative;
+}
+.contacts-wrap{
+    width: 320px;
+    min-height: 308px;
+    background-color: #fff;
+    padding: 50px;
+    box-sizing: border-box;
+
+}
+.c-btn{
+    padding: 15px 45px;
+}
+.addres{
+    font-size: 16px;
+    color: #666;
+    margin: 30px 0;
+    margin-bottom: 45px;
+}
+.tel{
+    display: block;
+    padding-top: 20px;
+}
+footer{
+    display: flex;
+    justify-content: center;
+}
+.social-media ul{
+    display: flex;
+}
+.social-media a{
+    background-color: #e1e1e1;
+    height: 80px;
+    height: 80px;
+    border-radius: 50%;
 }
